--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 
   <!-- SKIP LINKS -->
-  <nav aria-label="Skip links">
-  <a href="#data-entry" class="skip-link">Skip to data entry</a>
-  <a href="#results-card" class="skip-link">Skip to results</a>
-  <a href="#visualization-card" class="skip-link">Skip to visualization</a>
-  <a href="#" class="skip-link" id="skip-to-table">Skip to data table</a>
-</nav>
+  <nav aria-label="Skip links" class="skip-links-nav">
+    <a href="#data-entry" class="skip-link">Skip to data entry</a>
+    <a href="#results-card" class="skip-link">Skip to results</a>
+    <a href="#visualization-card" class="skip-link">Skip to visualization</a>
+    <a href="#view-table-btn" class="skip-link" id="skip-to-table">Skip to data table</a>
+  </nav>
 
   <!-- NOSCRIPT FALLBACK -->
   <noscript>
@@ -29,7 +29,7 @@
     <main class="content">
       <h1 class="sr-only">Dividend Discount Model Calculator</h1>
 
-      <!-- CARD 1 – Equation -->
+      <!-- CARD 1 â€“ Equation -->
       <section class="card" id="equation-card">
         <h2 class="card-title">Dividend Discount Models</h2>
         <p class="equation-intro">Three approaches to equity valuation</p>
@@ -113,7 +113,7 @@
 
       <!-- MIDDLE ROW -->
       <div class="middle-row">
-        <!-- CARD 2 – Results -->
+        <!-- CARD 2 â€“ Results -->
         <section class="card" id="results-card" tabindex="-1" aria-labelledby="results-title">
           <h3 class="card-title" id="results-title">Valuations</h3>
           
@@ -121,7 +121,7 @@
           <div id="result-announcement" class="sr-only" aria-live="polite" aria-atomic="true"></div>
         </section>
 
-        <!-- CARD 3 – Visualization -->
+        <!-- CARD 3 â€“ Visualization -->
         <section class="card" id="visualization-card" tabindex="-1" aria-labelledby="visualization-title">
           <h3 class="card-title" id="visualization-title">Dividend Cash Flows</h3>
           
@@ -144,7 +144,7 @@
         </section>
       </div>
 
-      <!-- CARD 4 – Data Entry -->
+      <!-- CARD 4 â€“ Data Entry -->
 <section class="card" id="data-entry" tabindex="-1" role="region" aria-labelledby="inputs-title">
   <h3 class="card-title" id="inputs-title">Data Entry</h3>
 
