--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                   <mrow>
                     <mi mathcolor="#9333ea" mathvariant="bold">P</mi>
                     <mo>=</mo>
-                    <mtext>PV(high growth) + PV(terminal)</mtext>
+                    <mtext style="font-size:0.9em;">PV(high) + PV(term)</mtext>
                   </mrow>
                 </math>
               </div>
               <div class="html-equation" hidden>
-                <strong style="color:#9333ea;">P</strong> = PV(high growth) + PV(terminal)
+                <strong style="color:#9333ea;">P</strong> = PV(high) + PV(term)
               </div>
             </div>
           </div>
