--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
               <div class="html-equation" hidden>
                 <strong style="color:#3c6ae5;">P</strong> = 
-                <span style="color:#b95b1d;">Dâ‚€</span> ÷ 
+                <span style="color:#b95b1d;">D₀</span> ÷ 
                 <span style="color:#733599;">r</span>
               </div>
             </div>
@@ -74,7 +74,7 @@
                       <msub><mi mathcolor="#b95b1d">D</mi><mn>1</mn></msub>
                       <mrow>
                         <mi mathcolor="#733599">r</mi>
-                        <mo>âˆ’</mo>
+                        <mo>−</mo>
                         <mi mathcolor="#15803d">g</mi>
                       </mrow>
                     </mfrac>
@@ -83,8 +83,8 @@
               </div>
               <div class="html-equation" hidden>
                 <strong style="color:#15803d;">P</strong> = 
-                <span style="color:#b95b1d;">Dâ‚</span> ÷ 
-                (<span style="color:#733599;">r</span> âˆ’ <span style="color:#15803d;">g</span>)
+                <span style="color:#b95b1d;">D₁</span> ÷ 
+                (<span style="color:#733599;">r</span> − <span style="color:#15803d;">g</span>)
               </div>
             </div>
           </div>
@@ -161,7 +161,7 @@
   <div class="input-grid">
     <!-- Current Dividend -->
      <div class="input-row">
-  <label for="D0">Current Dividend (Dâ‚€):</label>
+  <label for="D0">Current Dividend (D₀):</label>
   <div class="input-wrapper">
     <span class="input-prefix">$</span>
     <input type="number" id="D0" class="input-field-inline" min="0.01" max="1000" step="0.01" value="5"
